# lp-bug-triager

./: README.md  lp-bug-triager.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
po/: lp-bug-triager.pot  sv.mo  sv.po
src/lp_bug_triager/: main.py
