[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lp-bug-triager"
version = "0.1.2"
description = "GTK4 Launchpad bug triage tool with NLP classification"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
lp-bug-triager = "lp_bug_triager.main:main"

[tool.setuptools.packages.find]
where = ["src"]
